recover from facist setting requirement

--- a/settings.ini
+++ b/settings.ini
@@ -3,10 +3,12 @@
 lib_name = nbdev_try1
 user = flaschbier
 description = Just give it a try.
-# keywords = some keywords
+# recover from some bloody unneccessary error
+## AssertionError: missing expected setting: keywords
+keywords = bloodyfacistkeyword
 author = Flasch Bier
-# author_email = email@example.com
-# copyright = Your Name or Company Name
+author_email = email@example.com
+copyright = Flasch Bier
 branch = master
 version = 0.0.1
 min_python = 3.6
